# oiio-linker-error

./: .gitignore  CMakeLists.txt  README.md  myapp.cpp  mylib.cpp  mylib.hpp  vcpkg.json
source/myapp/: CMakeLists.txt  main.cpp
source/mylib/: CMakeLists.txt  mylib.cpp
